# iodine

./: .gitignore  CMakeLists.txt
contrib/: CMakeLists.txt
contrib/src/: sha2.c  sha2.h  stb_ds.c
src/: iod_endian.h  iodine.c  iodine.h  iodine_alloc.h  stb_ds.c
test/: main.c
